--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
+  flutter_animate: ^4.5.0
+  intl: ^0.18.1
+  fl_chart: ^0.64.0
 
 dev_dependencies:
   flutter_test:
